# Marle-Rust

./: .env  .gitignore  Cargo.toml  README.md  Shuttle.toml  cargo.toml
.github/workflows/: rust.yml
src/: main.rs  util.rs
src/commands/: mod.rs  say.rs
src/commands/fun/: confess.rs  mod.rs  say.rs  uc.rs
src/commands/info/: age.rs  info.rs  latest_commit.rs  links.rs  mod.rs  ping.rs  say.rs  serverinfo.rs
src/commands/moderation/: ban.rs  blacklist.rs  kick.rs  mod.rs  ready_channel.rs  test.rs  timeout.rs
src/events/: ready_event.rs
src/events/basic/: message_create.rs  messsage_create.rs  mod.rs  reaction_add.rs  ready_event.rs
src/handlers/: event_handler.rs
